# database-reactivation

./: Dockerfile  README.md  deploy-to-railway.sh  docker-compose.yml  prd.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py  database.db  pyproject.toml  requirements.txt  run.py
backend/backend/: api.py  csv_processor.py  database.py  llm_engine.py  main.py  models.py  sms_gateway.py  state_manager.py
backend/scripts/: check_db_connection.py  init_neon_db.py
frontend/app/: page.tsx
frontend/app/conversations/: page.tsx
frontend/app/conversations/[id]/: page.tsx
frontend/app/export-leads/: page.tsx
frontend/app/leads/: page.tsx
frontend/app/leads/[id]/: page.tsx
frontend/components/: DashboardStats.tsx  ImportLeadsModal.tsx  LeadTable.tsx
frontend/utils/: config.ts
